<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboclaw_ros</name>
  <version>0.0.0</version>
  <description>ROS interface for RoboClaw motor controller</description>
  <maintainer email="ngmorales97@gmail.com">Nick Morales</maintainer>
  <maintainer email="liz.mtzgr.00@gmail.com">Liz Metzger</maintainer>
  <license>MPL 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>roboclaw</depend>
  <depend>std_srvs</depend>
  <depend>roboclaw_interfaces</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
